--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "me",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sillle14.github.io/me",
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/reach__router": "^1.3.7",
     "gh-pages": "^3.1.0"
   }
 }
