--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "me",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sillle14.github.io/me",
   "dependencies": {
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.10",
