--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "me",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sillle14.github.io/me",
+  "homepage": "https://lewissilletto.com",
   "dependencies": {
-    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -14,6 +13,8 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
@@ -45,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@types/reach__router": "^1.3.7",
     "gh-pages": "^3.1.0"
   }
 }
