--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
-    "predeploy": "npm run build",
+    "predeploy": "rm -rf build/ && npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
