--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.3",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
     "typescript": "^4.2.3"
   },
   "scripts": {
@@ -45,6 +47,7 @@
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "gh-pages": "^3.1.0",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "react-scripts": "5.0.1"
   }
 }
