--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@mui/styles": "^5.11.16",
@@ -24,10 +22,10 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "predeploy": "rm -rf build/ && npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -50,9 +48,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.3",
-    "customize-cra": "^1.0.0",
     "gh-pages": "^3.1.0",
-    "react-app-rewired": "^2.1.8",
     "react-scripts": "5.0.1"
   }
 }
